src/objects/Contract_Loading_Step__c.object
<CustomObject>
    <description>Status in Contract Loading related to Contract Checklist for History Tracking purposes</description>
    <fields>
        <fullName>Comments_Remarks__c</fullName>
        <label>Comments/Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Checklist__c</fullName>
        <label>Contract Checklist</label>
        <referenceTo>Contract_Checklist__c</referenceTo>
        <relationshipLabel>Contract Loading Steps</relationshipLabel>
        <relationshipName>Contract_Loading_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Loading_Step__c</fullName>
        <label>Contract Loading Step</label>
        <picklist>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Load - Rate Sheet Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Load - Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Returned to MM/MC-See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Returned to Loading Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Returned to Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested ID&apos;s(Vendor or Expedia ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loading Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Loading Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Inventory Load - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Load Additional Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Time__c</fullName>
        <formula>LastModifiedDate -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSG_User_Name__c</fullName>
        <formula>PSG_User_Role_Name__r.PSG_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSG User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_User_Role_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSG User Role Number Assigned To</label>
        <referenceTo>PSG_User_Role__c</referenceTo>
        <relationshipName>Contract_Loading_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSG_User_Role__c</fullName>
        <formula>TEXT(PSG_User_Role_Name__r.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSG User Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to PSG User object for assigning Step to user in PSG Org</description>
        <label>PSG User</label>
        <referenceTo>PSG_User__c</referenceTo>
        <relationshipLabel>Contract Loading Steps</relationshipLabel>
        <relationshipName>Contract_Loading_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Field required by PSG Contract Loading Task</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Query__c</fullName>
        <description>Field needed for PSG Task Creation</description>
        <label>Type of Query</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-outs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut-Off/Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Ranges/Fair Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meal Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Ages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates	Not Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclear PDF/ Missing PDF</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Contract Loading Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLS-{0000000}</displayFormat>
        <label>Contract Loading Steps Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Loading Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>